[tool.poetry]
name = "sim-stack-parser"
version = "0.1.0"
description = ""
authors = ["Joe Polny <joepolny@gmail.com>"]
readme = "README.md"
packages = [{include = "sim_stack_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
pyteal = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
